# cherry-pick-check

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/cherry_pick_check/: __init__.py  auth.py  branch_detector.py  cherry_pick_detector.py  cli.py  github_client.py  models.py  output.py
tests/: test_branch_detector.py  test_models.py
