[project]
name = "cherry-pick-check"
version = "0.1.0"
description = "Check if GitHub PRs have been cherry-picked to release branches"
readme = "README.md"
authors = [
    { name = "zhuwenxing", email = "wenxing.zhu@zilliz.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cherry-pick-check = "cherry_pick_check:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
